refactor make table

--- a/make_latex_table.ipynb
+++ b/make_latex_table.ipynb
@@ -55,7 +55,7 @@
     "import math\n",
     "from decimal import Decimal\n",
     "\n",
-    "COMPARE_DESCRIPTORS = [\"Proposed\", \"orb\", \"sphorb\", \"sift\", \"spoint\", \"alike\", ]\n",
+    "COMPARE_DESCRIPTORS = [\"Proposed\", \"Proposed1\",  \"orb\", \"sphorb\", \"sift\", \"spoint\", \"alike\", ]\n",
     "ABLATION_DESCRIPTORS = [\"Proposed\",\"Proposed01\", \"Proposed1\", \"Proposed10\", \"Ltspoint\", \"Proposed_un\", \"tspoint\", \"Ftspoint\"] \n",
     "NOT_T_DESCRIPTORS = [\"spoint\", \"tspoint\", \"sphorb\", \"Ltspoint\", \"Proposed01\", \"Proposed03\", \"Proposed05\", \"Proposed1\", \"Proposed3\", \"Proposed\", \"Proposed10\", \"Proposed20\", \"Proposed_un\", \"Ftspoint\"]\n",
     "METHODS = [\"\", \"t\"]\n",
@@ -503,211 +503,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:49: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:51: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:49: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:51: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R indoor\n",
-      "\\begin{tabular}{rrrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.083 & 0.914 & 0.667 &   0.786 & 0.544 &  0.411 &   0.758 &  2.975 &   2.782 \\\\\n",
-      "         1000 &          0.092 & 0.832 & 0.559 &   0.526 & 0.281 &  0.229 &   0.734 &  2.923 &   2.681 \\\\\n",
-      "        10000 &          0.083 & 0.361 & 0.184 &   0.246 & 0.129 &  0.125 &   0.758 &  2.847 &   2.677 \\\\\n",
-      "          500 &          0.078 & 1.860 & 1.218 &   1.685 & 0.932 &  0.868 &   2.176 &  9.305 &   8.650 \\\\\n",
-      "         1000 &          0.123 & 1.811 & 1.144 &   1.082 & 0.378 &  0.495 &   2.057 &  9.129 &   8.300 \\\\\n",
-      "        10000 &          0.106 & 0.576 & 0.276 &   0.460 & 0.105 &  0.214 &   2.099 &  8.872 &   8.286 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "\\begin{tabular}{rrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &  Proposed (0.1\\%) &  Proposed (1\\%) &  Proposed (10\\%) &   MNN &  Proposed (5\\%)+L &  KNN+L &  FLANN \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.083 &            0.107 &          0.088 &           1.091 & 1.091 &            1.804 &  1.091 &  0.769 \\\\\n",
-      "         1000 &          0.092 &            0.075 &          0.086 &           1.060 & 1.060 &            1.994 &  1.060 &  0.616 \\\\\n",
-      "        10000 &          0.083 &            0.071 &          0.085 &           1.059 & 1.059 &            1.994 &  1.059 &  0.634 \\\\\n",
-      "          500 &          0.078 &            0.111 &          0.090 &           3.232 & 3.232 &            5.600 &  3.232 &  2.215 \\\\\n",
-      "         1000 &          0.123 &            0.048 &          0.106 &           3.101 & 3.101 &            6.182 &  3.101 &  1.633 \\\\\n",
-      "        10000 &          0.106 &            0.046 &          0.105 &           3.091 & 3.091 &            6.182 &  3.091 &  1.672 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "R outdoor\n",
-      "\\begin{tabular}{rrrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.139 & 0.629 & 0.296 &   0.283 & 0.324 &  0.083 &   1.649 &  3.085 &   2.932 \\\\\n",
-      "         1000 &          0.115 & 0.454 & 0.224 &   0.200 & 0.201 &  0.062 &   0.972 &  3.057 &   2.598 \\\\\n",
-      "        10000 &          0.120 & 0.218 & 0.135 &   0.117 & 0.142 &  0.045 &   0.538 &  2.915 &   2.517 \\\\\n",
-      "          500 &          0.254 & 1.144 & 0.529 &   0.461 & 0.429 &  0.064 &   5.054 &  9.681 &   9.191 \\\\\n",
-      "         1000 &          0.204 & 0.774 & 0.378 &   0.298 & 0.230 &  0.050 &   2.944 &  9.589 &   8.122 \\\\\n",
-      "        10000 &          0.243 & 0.262 & 0.219 &   0.173 & 0.183 &  0.035 &   1.555 &  9.116 &   7.875 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "\\begin{tabular}{rrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &  Proposed (0.1\\%) &  Proposed (1\\%) &  Proposed (10\\%) &   MNN &  Proposed (5\\%)+L &  KNN+L &  FLANN \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.139 &            0.173 &          0.141 &           0.639 & 0.639 &            0.989 &  0.639 &  0.474 \\\\\n",
-      "         1000 &          0.115 &            0.124 &          0.115 &           0.392 & 0.392 &            0.783 &  0.392 &  0.198 \\\\\n",
-      "        10000 &          0.120 &            0.111 &          0.124 &           0.296 & 0.296 &            0.873 &  0.296 &  0.216 \\\\\n",
-      "          500 &          0.254 &            0.334 &          0.234 &           1.918 & 1.918 &            3.041 &  1.918 &  1.373 \\\\\n",
-      "         1000 &          0.204 &            0.260 &          0.215 &           1.161 & 1.161 &            2.409 &  1.161 &  0.533 \\\\\n",
-      "        10000 &          0.243 &            0.232 &          0.248 &           0.861 & 0.861 &            2.686 &  0.861 &  0.587 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "T indoor\n",
-      "\\begin{tabular}{rrrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.112 & 0.931 & 0.731 &   0.707 & 0.663 &  0.413 &   0.843 &  2.951 &   2.801 \\\\\n",
-      "         1000 &          0.104 & 0.750 & 0.498 &   0.521 & 0.418 &  0.228 &   0.810 &  2.908 &   2.700 \\\\\n",
-      "        10000 &          0.095 & 0.429 & 0.231 &   0.269 & 0.222 &  0.126 &   0.849 &  2.835 &   2.694 \\\\\n",
-      "          500 &          0.131 & 1.399 & 1.065 &   0.947 & 1.027 &  0.560 &   2.335 &  9.215 &   8.668 \\\\\n",
-      "         1000 &          0.095 & 1.040 & 0.593 &   0.717 & 0.553 &  0.292 &   2.188 &  9.056 &   8.302 \\\\\n",
-      "        10000 &          0.073 & 0.496 & 0.210 &   0.306 & 0.248 &  0.102 &   2.270 &  8.798 &   8.287 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "\\begin{tabular}{rrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &  Proposed (0.1\\%) &  Proposed (1\\%) &  Proposed (10\\%) &   MNN &  Proposed (5\\%)+L &  KNN+L &  FLANN \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.112 &            0.204 &          0.109 &           1.150 & 1.150 &            1.829 &  1.150 &  0.825 \\\\\n",
-      "         1000 &          0.104 &            0.134 &          0.099 &           1.092 & 1.092 &            2.013 &  1.092 &  0.627 \\\\\n",
-      "        10000 &          0.095 &            0.122 &          0.098 &           1.089 & 1.089 &            2.013 &  1.089 &  0.672 \\\\\n",
-      "          500 &          0.131 &            0.309 &          0.082 &           3.346 & 3.346 &            5.647 &  3.346 &  2.330 \\\\\n",
-      "         1000 &          0.095 &            0.183 &          0.084 &           3.141 & 3.141 &            6.201 &  3.141 &  1.585 \\\\\n",
-      "        10000 &          0.073 &            0.166 &          0.078 &           3.121 & 3.121 &            6.201 &  3.121 &  1.708 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "T outdoor\n",
-      "\\begin{tabular}{rrrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &   ORB &  TORB &  SPHORB &  SIFT &  TSIFT &  SPoint &  ALIKE &  TALIKE \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.195 & 0.886 & 0.506 &   0.529 & 0.799 &  0.324 &   1.738 &  3.087 &   2.948 \\\\\n",
-      "         1000 &          0.198 & 0.700 & 0.404 &   0.373 & 0.613 &  0.231 &   1.230 &  3.061 &   2.702 \\\\\n",
-      "        10000 &          0.189 & 0.527 & 0.279 &   0.281 & 0.385 &  0.163 &   1.284 &  2.949 &   2.647 \\\\\n",
-      "          500 &          0.266 & 1.307 & 0.729 &   0.831 & 1.232 &  0.465 &   5.207 &  9.684 &   9.215 \\\\\n",
-      "         1000 &          0.274 & 0.957 & 0.571 &   0.475 & 0.893 &  0.297 &   3.498 &  9.591 &   8.326 \\\\\n",
-      "        10000 &          0.256 & 0.582 & 0.305 &   0.330 & 0.473 &  0.151 &   3.348 &  9.182 &   8.160 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "\\begin{tabular}{rrrrrrrrr}\n",
-      "\\toprule\n",
-      " Points limit &  Proposed (5\\%) &  Proposed (0.1\\%) &  Proposed (1\\%) &  Proposed (10\\%) &   MNN &  Proposed (5\\%)+L &  KNN+L &  FLANN \\\\\n",
-      "\\midrule\n",
-      "          500 &          0.195 &            0.381 &          0.196 &           1.016 & 1.016 &            1.480 &  1.016 &  0.845 \\\\\n",
-      "         1000 &          0.198 &            0.252 &          0.174 &           1.049 & 1.049 &            1.487 &  1.049 &  0.704 \\\\\n",
-      "        10000 &          0.189 &            0.267 &          0.196 &           1.037 & 1.037 &            1.651 &  1.037 &  0.798 \\\\\n",
-      "          500 &          0.266 &            0.678 &          0.249 &           2.837 & 2.837 &            4.263 &  2.837 &  2.271 \\\\\n",
-      "         1000 &          0.274 &            0.430 &          0.226 &           2.818 & 2.818 &            4.161 &  2.818 &  1.722 \\\\\n",
-      "        10000 &          0.256 &            0.480 &          0.265 &           2.622 & 2.622 &            4.611 &  2.622 &  1.985 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:49: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:51: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:49: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
-      "C:\\Users\\taab7\\AppData\\Local\\Temp\\ipykernel_13900\\3809608482.py:51: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n"
-     ]
-    }
-   ],
-   "source": [
-    "def make_latex_table_MAEMSE():\n",
-    "    for i, param in enumerate(PARAMS):\n",
-    "        for j, loc in enumerate([\"indoor\", \"outdoor\"]):\n",
-    "            if loc == \"indoor\":\n",
-    "                locs = INDOORS\n",
-    "            else:\n",
-    "                locs = OUTDOORS\n",
-    "            print(param, loc)\n",
-    "            maemse_data = {'Points limit': [500, 1000, 10000, 500, 1000, 10000]}\n",
-    "            maemse_compare_df = pd.DataFrame(maemse_data)\n",
-    "            maemse_ablation_df = pd.DataFrame(maemse_data)\n",
-    "            for tgt in [\"compare\", \"ablation\"]:\n",
-    "                if tgt == \"compare\":\n",
-    "                    descriptors = COMPARE_DESCRIPTORS\n",
-    "                    maemse_df = maemse_compare_df\n",
-    "                else:\n",
-    "                    descriptors = ABLATION_DESCRIPTORS\n",
-    "                    maemse_df = maemse_ablation_df\n",
-    "                for descriptor in descriptors:\n",
-    "                    for method in METHODS:\n",
-    "                        if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
-    "                            continue\n",
-    "                        method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
-    "                        maemse_df[method_tmp] = [0, 0, 0, 0, 0, 0]\n",
-    "        \n",
-    "            for idx_points, num_points in enumerate([500, 1000, 10000]):\n",
-    "                base_path = f\"results/FP_{num_points}/values\"\n",
-    "                value_dict = {}\n",
-    "                for tgt in [\"compare\", \"ablation\"]:\n",
-    "                    if tgt == \"compare\":\n",
-    "                        descriptors = COMPARE_DESCRIPTORS\n",
-    "                        maemse_df = maemse_compare_df\n",
-    "                    else:\n",
-    "                        descriptors = ABLATION_DESCRIPTORS\n",
-    "                        maemse_df = maemse_ablation_df\n",
-    "                    for descriptor in descriptors:\n",
-    "                        for method in METHODS:\n",
-    "                            if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
-    "                                continue\n",
-    "                            all_error_data = []\n",
-    "                            for scene in locs:\n",
-    "                                file_path = f\"{base_path}/{scene}_{method}{descriptor}_5PA_GSM_wRT/{param}_ERRORS.csv\"\n",
-    "                                error_data = read_csv_data(file_path)\n",
-    "                                all_error_data.extend(error_data)\n",
-    "                            method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
-    "                            maemse_df.loc[idx_points, method_tmp] = np.mean(all_error_data)\n",
-    "                            maemse_df.loc[idx_points+3, method_tmp] = np.mean(np.array(all_error_data) ** 2)\n",
-    "        \n",
-    "            maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
-    "            print(maemse_latex_table)\n",
-    "            maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n",
-    "            print(maemse_latex_table)\n",
-    "\n",
-    "make_latex_table_MAEMSE()"
-   ]
   },
   {
    "cell_type": "code",
