--- a/make_latex_table.ipynb
+++ b/make_latex_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,10 +503,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n",
+      "\\begin{tabular}{lllllllllllll}\n",
+      "\\toprule\n",
+      "       Method &    0 &      1 &      2 &       3 &    4 &      5 &      6 &       7 &       8 &      9 &     10 &      11 \\\\\n",
+      "\\midrule\n",
+      "Proposed (1\\%) &  145 &  0.306 & 0.0438 & 0.00591 &  151 &  0.315 & 0.0445 & 0.00600 &     151 &  0.315 & 0.0445 & 0.00600 \\\\\n",
+      "Proposed (5\\%) &  150 &  0.315 & 0.0447 & 0.00599 &  155 &  0.325 & 0.0451 & 0.00602 &     155 &  0.325 & 0.0451 & 0.00602 \\\\\n",
+      "          ORB &  130 & 0.0240 & 0.0655 &  0.0477 &  263 & 0.0486 & 0.0490 & 0.00663 & 1.02e+3 &  0.179 & 0.0544 & 0.00755 \\\\\n",
+      "         TORB &  109 & 0.0310 & 0.0643 &  0.0449 &  234 & 0.0661 & 0.0474 & 0.00636 &     761 &  0.196 & 0.0521 & 0.00730 \\\\\n",
+      "       SPHORB & 99.7 &  0.208 & 0.0746 &  0.0646 &  204 &  0.428 & 0.0483 & 0.00644 &     868 &   1.84 & 0.0510 & 0.00672 \\\\\n",
+      "         SIFT & 81.5 & 0.0717 & 0.0488 & 0.00691 &  120 &  0.102 & 0.0439 & 0.00629 &     149 &  0.119 & 0.0434 & 0.00629 \\\\\n",
+      "        TSIFT & 95.2 &  0.136 & 0.0445 & 0.00613 &  131 &  0.179 & 0.0433 & 0.00605 &     132 &  0.180 & 0.0432 & 0.00604 \\\\\n",
+      "       SPoint &  100 &  0.111 & 0.0448 & 0.00588 &  141 &  0.154 & 0.0445 & 0.00588 &     146 &  0.157 & 0.0440 & 0.00588 \\\\\n",
+      "        ALIKE & 53.9 & 0.0368 & 0.0629 &  0.0261 & 87.1 & 0.0581 & 0.0597 &  0.0146 &     178 &  0.106 & 0.0583 & 0.00845 \\\\\n",
+      "       TALIKE & 45.9 & 0.0332 & 0.0695 &  0.0231 & 67.5 & 0.0474 & 0.0637 &  0.0147 &    91.0 & 0.0622 & 0.0743 &  0.0527 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\\begin{tabular}{lllllllllllll}\n",
+      "\\toprule\n",
+      "         Method &    0 &     1 &      2 &       3 &    4 &     5 &      6 &       7 &    8 &     9 &     10 &      11 \\\\\n",
+      "\\midrule\n",
+      "  Proposed (1\\%) &  145 & 0.306 & 0.0438 & 0.00591 &  151 & 0.315 & 0.0445 & 0.00600 &  151 & 0.315 & 0.0445 & 0.00600 \\\\\n",
+      "  Proposed (5\\%) &  150 & 0.315 & 0.0447 & 0.00599 &  155 & 0.325 & 0.0451 & 0.00602 &  155 & 0.325 & 0.0451 & 0.00602 \\\\\n",
+      "Proposed (0.1\\%) & 70.2 & 0.147 & 0.0447 & 0.00602 & 75.5 & 0.155 & 0.0447 & 0.00600 & 75.5 & 0.155 & 0.0447 & 0.00600 \\\\\n",
+      " Proposed (10\\%) &  101 & 0.213 & 0.0463 & 0.00618 &  103 & 0.217 & 0.0457 & 0.00609 &  103 & 0.217 & 0.0457 & 0.00609 \\\\\n",
+      "Proposed (5\\%)+L & 66.6 & 0.141 & 0.0440 & 0.00592 & 67.4 & 0.142 & 0.0443 & 0.00606 & 67.4 & 0.142 & 0.0443 & 0.00606 \\\\\n",
+      "            MNN &  101 & 0.213 & 0.0463 & 0.00618 &  103 & 0.217 & 0.0457 & 0.00609 &  103 & 0.217 & 0.0457 & 0.00609 \\\\\n",
+      "          KNN+L &  101 & 0.213 & 0.0463 & 0.00618 &  103 & 0.217 & 0.0457 & 0.00609 &  103 & 0.217 & 0.0457 & 0.00609 \\\\\n",
+      "          FLANN &  102 & 0.216 & 0.0474 & 0.00623 &  105 & 0.221 & 0.0459 & 0.00608 &  105 & 0.221 & 0.0459 & 0.00608 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "T\n",
+      "\\begin{tabular}{lllllllllllll}\n",
+      "\\toprule\n",
+      "       Method &    0 &      1 &     2 &     3 &    4 &      5 &     6 &     7 &       8 &      9 &    10 &    11 \\\\\n",
+      "\\midrule\n",
+      "Proposed (1\\%) &  145 &  0.306 & 0.601 & 0.682 &  151 &  0.315 & 0.618 & 0.715 &     151 &  0.315 & 0.618 & 0.715 \\\\\n",
+      "Proposed (5\\%) &  150 &  0.315 & 0.666 & 0.879 &  155 &  0.325 & 0.645 & 0.828 &     155 &  0.325 & 0.645 & 0.828 \\\\\n",
+      "          ORB &  130 & 0.0240 &  1.31 &  2.38 &  263 & 0.0486 &  1.23 &  2.24 & 1.02e+3 &  0.179 &  1.08 &  2.05 \\\\\n",
+      "         TORB &  109 & 0.0310 &  1.26 &  2.11 &  234 & 0.0661 &  1.14 &  1.86 &     761 &  0.196 & 0.774 &  1.15 \\\\\n",
+      "       SPHORB & 99.7 &  0.208 &  1.25 &  2.25 &  204 &  0.428 &  1.19 &  2.12 &     868 &   1.84 & 0.944 &  1.48 \\\\\n",
+      "         SIFT & 81.5 & 0.0717 & 0.877 &  1.46 &  120 &  0.102 & 0.574 & 0.696 &     149 &  0.119 & 0.533 & 0.590 \\\\\n",
+      "        TSIFT & 95.2 &  0.136 & 0.614 & 0.835 &  131 &  0.179 & 0.486 & 0.509 &     132 &  0.180 & 0.485 & 0.507 \\\\\n",
+      "       SPoint &  100 &  0.111 & 0.790 &  1.08 &  141 &  0.154 & 0.682 & 0.881 &     146 &  0.157 & 0.697 & 0.920 \\\\\n",
+      "        ALIKE & 53.9 & 0.0368 & 0.835 &  1.45 & 87.1 & 0.0581 & 0.811 &  1.39 &     178 &  0.106 & 0.794 &  1.34 \\\\\n",
+      "       TALIKE & 45.9 & 0.0332 & 0.758 &  1.26 & 67.5 & 0.0474 & 0.681 &  1.01 &    91.0 & 0.0622 & 0.678 & 0.990 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\\begin{tabular}{lllllllllllll}\n",
+      "\\toprule\n",
+      "         Method &    0 &     1 &     2 &     3 &    4 &     5 &     6 &     7 &    8 &     9 &    10 &    11 \\\\\n",
+      "\\midrule\n",
+      "  Proposed (1\\%) &  145 & 0.306 & 0.601 & 0.682 &  151 & 0.315 & 0.618 & 0.715 &  151 & 0.315 & 0.618 & 0.715 \\\\\n",
+      "  Proposed (5\\%) &  150 & 0.315 & 0.666 & 0.879 &  155 & 0.325 & 0.645 & 0.828 &  155 & 0.325 & 0.645 & 0.828 \\\\\n",
+      "Proposed (0.1\\%) & 70.2 & 0.147 & 0.765 & 0.961 & 75.5 & 0.155 & 0.763 & 0.949 & 75.5 & 0.155 & 0.763 & 0.949 \\\\\n",
+      " Proposed (10\\%) &  101 & 0.213 & 0.688 & 0.935 &  103 & 0.217 & 0.673 & 0.903 &  103 & 0.217 & 0.673 & 0.903 \\\\\n",
+      "Proposed (5\\%)+L & 66.6 & 0.141 & 0.614 & 0.869 & 67.4 & 0.142 & 0.621 & 0.892 & 67.4 & 0.142 & 0.621 & 0.892 \\\\\n",
+      "            MNN &  101 & 0.213 & 0.688 & 0.935 &  103 & 0.217 & 0.673 & 0.903 &  103 & 0.217 & 0.673 & 0.903 \\\\\n",
+      "          KNN+L &  101 & 0.213 & 0.688 & 0.935 &  103 & 0.217 & 0.673 & 0.903 &  103 & 0.217 & 0.673 & 0.903 \\\\\n",
+      "          FLANN &  102 & 0.216 & 0.685 & 0.891 &  105 & 0.221 & 0.673 & 0.874 &  105 & 0.221 & 0.673 & 0.874 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_latex_table_INDEX_farm():\n",
+    "    for i, param in enumerate(PARAMS):\n",
+    "            locs = POSES\n",
+    "            print(param)\n",
+    "            maemse_data = {'Points limit': [500, 1000, 10000, 500, 1000, 10000]}\n",
+    "            maemse_compare_df = pd.DataFrame(maemse_data)\n",
+    "            maemse_ablation_df = pd.DataFrame(maemse_data)\n",
+    "            for tgt in [\"compare\", \"ablation\"]:\n",
+    "                if tgt == \"compare\":\n",
+    "                    descriptors = COMPARE_DESCRIPTORS\n",
+    "                    method_tmp_list = []\n",
+    "                    for descriptor in descriptors:\n",
+    "                        for method in METHODS:\n",
+    "                            if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                                continue\n",
+    "                            #method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                            method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                            method_tmp_list.append(method_tmp)\n",
+    "                    maemse_data = {'Method': method_tmp_list}\n",
+    "                    maemse_compare_df = pd.DataFrame(maemse_data)\n",
+    "                    maemse_df = maemse_compare_df\n",
+    "                else:\n",
+    "                    descriptors = ABLATION_DESCRIPTORS\n",
+    "                    method_tmp_list = []\n",
+    "                    for descriptor in descriptors:\n",
+    "                        for method in METHODS:\n",
+    "                            if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                                continue\n",
+    "                            method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                            method_tmp_list.append(method_tmp)\n",
+    "                    maemse_data = {'Method': method_tmp_list}\n",
+    "                    maemse_ablation_df = pd.DataFrame(maemse_data)\n",
+    "                    maemse_df = maemse_ablation_df\n",
+    "\n",
+    "\n",
+    "                for method_tmp in method_tmp_list:\n",
+    "                    for j in range(12):\n",
+    "                       maemse_df[j] = [0] * len(method_tmp_list)\n",
+    "\n",
+    "                for idx_points, num_points in enumerate([500, 1000, 10000]):\n",
+    "                    base_path = f\"results/FP_{num_points}/values\"\n",
+    "                    idx_methods = 0\n",
+    "                    for descriptor in descriptors:\n",
+    "                        for method in METHODS:\n",
+    "                            if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                                continue\n",
+    "                            all_MN_data = []\n",
+    "                            all_MS_data = []\n",
+    "                            all_error_data = []\n",
+    "                            method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                            for scene in locs:\n",
+    "                                file_base_path = f\"{base_path}/{scene}_{method}{descriptor}_5PA_GSM_wRT\"\n",
+    "                                MN_path = file_base_path + \"/MATCHING_NUM.csv\"\n",
+    "                                MN_data = read_csv_data(MN_path)\n",
+    "                                all_MN_data.extend(MN_data)\n",
+    "                                MS_path = file_base_path + \"/MATCHING_SCORE.csv\"\n",
+    "                                MS_data = read_csv_data(MS_path)\n",
+    "                                all_MS_data.extend(MS_data)\n",
+    "                                error_path = file_base_path + f\"/{param}_ERRORS.csv\"\n",
+    "                                error_data = read_csv_data(error_path)\n",
+    "                                all_error_data.extend(error_data)\n",
+    "                            \n",
+    "                            maemse_df.loc[idx_methods, idx_points*4] = format(Decimal(str(np.mean(all_MN_data))), '.3g')\n",
+    "                            maemse_df.loc[idx_methods, idx_points*4+1] = format(Decimal(str(np.mean(all_MS_data))), '.3g')\n",
+    "                            maemse_df.loc[idx_methods, idx_points * 4+2] = format(Decimal(str(np.mean(all_error_data))), '.3g')\n",
+    "                            maemse_df.loc[idx_methods, idx_points * 4+3] = format(Decimal(str(np.mean(np.array(all_error_data) ** 2))), '.3g')\n",
+    "                            idx_methods += 1\n",
+    "        \n",
+    "            maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
+    "            print(maemse_latex_table)\n",
+    "            maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n",
+    "            print(maemse_latex_table)\n",
+    "\n",
+    "make_latex_table_INDEX_farm()"
+   ]
   },
   {
    "cell_type": "code",
